--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
 .container {
     padding: 0rem 1rem;
     border-radius: 1rem;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
 }
 
 .container-center {
