--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     font-size: 1em;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
+    display: inline-block;
 }
 
 .container-center {
