--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ body {
     font-size: 1em;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
-    display: inline-block;
+    /*display: inline-block;*/
 }
 
 .container-center {
     text-align: center;
     /* text-justify: auto; */
-    display: inline-block;
+    /*display: inline-block;*/
     font-style: Arial;
     text-align: justify;
     text-justify: inter-word;
@@ -47,6 +47,7 @@ body {
 .link {
     text-decoration: none;
     padding: 0.5rem 1rem;
+    display: inline-block;
 }
 
 .link-primary {
